# books

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  KOBO.md  LICENSE  README.md  SYNC.md  UPDATE.md  book_reccommendations.md  claude_ada_library.py  claude_backfill_metadata.py  claude_backfill_series.py  claude_cleanup_duplicates.py  claude_enrich_from_goodreads.py  claude_merge_series_links.py  claude_series_cleanup.py  claude_spike_series.py  deploy.sh  docker-compose.yml  features.md  main.py  nginx.conf  pyproject.toml  robots.txt  sqlite3-arm
books/: features.md  main.py
books/helpers/: auth.py  auto_length.py  auto_price.py  auto_tags.py  db.py  email.py  hardcover.py  metadata.py  metrics.py  openlibrary.py  recommend.py  refresh.py
books/routes/: __init__.py  auth.py  books.py  kobo.py  opds.py  recommendations.py  series.py
books/ui/: index.html  style.css
books/ui/src/: api.ts  auth-modal.ts  auth.ts  context.ts  main.ts  router.ts  theme.ts
helpers/: auth.py  db.py  metadata.py
koreader/: PATCHES.md
koreader/plugins/booksync.koplugin/: _meta.lua  main.lua
routes/: __init__.py  auth.py  books.py  kindle.py  series.py
scripts/: backfill_asins.py  enrich_missing_covers.py  enrich_series.py  fill_descriptions.py  fill_reviews.py  fill_tags_from_storygraph.py  import_calibre.py  import_storygraph.py  link_orphans.py  publish_plugin.sh  realign_covers_to_hardcover.py  set_password.py  sync_series_with_hardcover.py
ui/: index.html  style.css  tsconfig.json
ui/src/: api.ts  auth.ts  context.ts  main.ts  router.ts
ui/src/pages/: add-book.ts  (+5 more)
(+24 files in other folders)
